@@ -1,0 +1,2 @@
+# Don't ignore the replays in this directory.
+!*.p1r
